First Devon4Net.Infrastructure.MongoDb component approach

--- a/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
+++ b/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "MongoDb": {
+    "UseMongoDb": true,
+    "ConnectionString": "",
+    "DatabaseName": ""
+  },
   "ExtraSettingsFiles": [
     "appsettingsExtra.json",
     "Put a directory path (relative/absolute/linux-like) like /run/secrets/global where there are many settings/secret files to load",
