Repository Update with methods implemented, and Student Controller

--- a/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
+++ b/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "MongoDb": {
-    "UseMongoDb": true,
-    "ConnectionString": "",
-    "DatabaseName": ""
+    "UseMongo": true,
+    "ConnectionString": "mongodb://127.0.0.1:27017",
+    "DatabaseName": "Student"
   },
   "ExtraSettingsFiles": [
     "appsettingsExtra.json",
