Added multiple database with multiple collections support

--- a/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
+++ b/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
   "MongoDb": {
     "UseMongo": true,
-    "ConnectionString": "mongodb://127.0.0.1:27017",
-    "DatabaseName": "Student"
+    "AllowMultipleDatabases": true,
+    "Databases": [
+      {
+        "ConnectionString": "mongodb://127.0.0.1:27017",
+        "DatabaseName": "School"
+      },
+      {
+        "ConnectionString": "mongodb+srv://admin:admin123@testcluster.s2x5b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+        "DatabaseName":  "Library"
+      }
+
+    ]
   },
   "ExtraSettingsFiles": [
     "appsettingsExtra.json",
