--- a/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
+++ b/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
@@ -8,7 +8,7 @@
         "DatabaseName": "School"
       },
       {
-        "ConnectionString": "mongodb+srv://admin:melania@testcluster.s2x5b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority", //"mongodb://127.0.0.1:27017",
+        "ConnectionString": "mongodb://127.0.0.1:27017",
         "DatabaseName": "Library"
       }
 
