--- a/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
+++ b/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
@@ -289,5 +289,9 @@
     "Version": "1.0.5.29",
     "Username": "",
     "Password": ""
+  },
+  "Cache": {
+    "EnableCache": true,
+    "ConnectionString": ""
   }
 }
