Updated mongoDB component: - Deleted AllowMultiple databases - Added summaries for the repository methods - Change exception class name - Added String Format default value for MongoDbException

--- a/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
+++ b/source/Templates/WebAPI/Devon4Net.Application.WebAPI/appsettings.Development.json
@@ -1,17 +1,19 @@
 {
   "MongoDb": {
     "UseMongo": true,
-    "AllowMultipleDatabases": true,
     "Databases": [
       {
-        "ConnectionString": "mongodb://127.0.0.1:27017",
+        "ConnectionString": "mongodb+srv://paul:admin@melanycluster.jqnsd1o.mongodb.net/?retryWrites=true&w=majority",
         "DatabaseName": "School"
       },
+      //{
+      //  "ConnectionString": "mongodb://127.0.0.1:27017",
+      //  "DatabaseName": "School"
+      //},
       {
         "ConnectionString": "mongodb://127.0.0.1:27017",
         "DatabaseName": "Library"
       }
-
     ]
   },
   "ExtraSettingsFiles": [
@@ -175,16 +177,16 @@
       }
     ]
   },
-  "Cors": //[], //Empty array allows all origins with the policy "CorsPolicy"
-  [
-    {
-      "CorsPolicy": "CorsPolicy",
-      "Origins": "http://localhost:4200,https://localhost:4200,http://localhost,https://localhost;http://localhost:8085,https://localhost:8085",
-      "Headers": "accept,content-type,origin,x-custom-header,authorization",
-      "Methods": "GET,POST,HEAD,PUT,DELETE",
-      "AllowCredentials": true
-    }
-  ],
+  "Cors": [], //Empty array allows all origins with the policy "CorsPolicy"
+  //[
+  //  {
+  //    "CorsPolicy": "CorsPolicy",
+  //    "Origins": "http://localhost:4200,https://localhost:4200,http://localhost,https://localhost;http://localhost:8085,https://localhost:8085",
+  //    "Headers": "accept,content-type,origin,x-custom-header,authorization",
+  //    "Methods": "GET,POST,HEAD,PUT,DELETE",
+  //    "AllowCredentials": true
+  //  }
+  //],
   "LiteDb": {
     "EnableLiteDb": true,
     "DatabaseLocation": "devon4net.db"
