--- a/source/Templates/Kafka/Devon4Net.Application.Kafka/appsettings.Development.json
+++ b/source/Templates/Kafka/Devon4Net.Application.Kafka/appsettings.Development.json
@@ -81,7 +81,7 @@
         "ProducerId": "Producer1", // devon identifier
         "Servers": "127.0.0.1:9092", // Initial list of brokers as a CSV list of broker host or host:port. The application may also use `rd_kafka_brokers_add()` to add brokers during runtime
         "ClientId": "client1", //Client identifier
-        "Topic": "devonfw", // topics to deliver the message
+        "Topic": "input", // topics to deliver the message
         "MessageMaxBytes": 1000000, //Maximum Kafka protocol request message size. Due to differing framing overhead between protocol versions the producer is unable to reliably enforce a strict max message limit at produce time and may exceed the maximum size by one message in protocol ProduceRequests, the broker will enforce the the topic's `max.message.bytes` limit (see Apache Kafka documentation)
         "CompressionLevel": -1, // [0-9] for gzip; [0-12] for lz4; only 0 for snappy; -1 = codec-dependent default compression level
         "CompressionType": "None", // None, Gzip, Snappy, Lz4, Zstd
@@ -103,7 +103,7 @@
         "ConsumerId": "Consumer1", // devon identifier
         "Servers": "127.0.0.1:9092",
         "GroupId": "group1",
-        "Topics": "devonfw", // Comma separated topics to subscribe  
+        "Topics": "output", // Comma separated topics to subscribe  
         "AutoCommit": true, //Automatically and periodically commit offsets in the background. Note: setting this to false does not prevent the consumer from fetching previously committed start offsets. To circumvent this behaviour set specific start offsets per partition in the call to assign()
         "StatisticsIntervalMs": 0, //librdkafka statistics emit interval. The application also needs to register a stats callback using `rd_kafka_conf_set_stats_cb()`. The granularity is 1000ms. A value of 0 disables statistics
         "SessionTimeoutMs": 10000, //Client group session and failure detection timeout. The consumer sends periodic heartbeats (heartbeat.interval.ms) to indicate its liveness to the broker. If no hearts are received by the broker for a group member within the session timeout, the broker will remove the consumer from the group and trigger a rebalance. The allowed range is configured with the **broker** configuration properties `group.min.session.timeout.ms` and `group.max.session.timeout.ms`. Also see `max.poll.interval.ms`
@@ -112,6 +112,26 @@
         "IsolationLevel": "ReadCommitted", //Controls how to read messages written transactionally: `ReadCommitted` - only return transactional messages which have been committed. `ReadUncommitted` - return all messages, even transactional messages which have been aborted.
         "EnableSslCertificateVerification": false,
         "Debug": "" //A comma-separated list of debug contexts to enable. Detailed Producer debugging: broker,topic,msg. Consumer: consumer,cgrp,topic,fetch
+      }
+    ],
+    "Streams": [
+      {
+        "ApplicationId": "value_count_stream",
+        "Servers": "localhost:9092",
+        "AutoOffsetReset": "earliest",
+        "StateDir": "./ValueCountStream",
+        "CommitIntervalMs": "5000",
+        "Guarantee": "at_least_once",
+        "MetricsRecording": "debug"
+      },
+      {
+        "ApplicationId": "json_merge_stream",
+        "Servers": "localhost:9092",
+        "AutoOffsetReset": "earliest",
+        "StateDir": "./ValueCountStream",
+        "CommitIntervalMs": "5000",
+        "Guarantee": "at_least_once",
+        "MetricsRecording": "debug"
       }
     ]
   }
