Grant Type corrected.

--- a/source/Devon4Net.Application.Keycloak/appsettings.Development.json
+++ b/source/Devon4Net.Application.Keycloak/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Realm": "MyRealm",
     "Url": "http://localhost:8080/",
     "ClientId": "SchoolApplication",
-    "Password": "password"
+    "GrantType": "password"
   },
   "Logging": {
     "LogLevel": {
