--- a/source/Templates/Kafka/Devon4Net.Application.Kafka/appsettings.Development.json
+++ b/source/Templates/Kafka/Devon4Net.Application.Kafka/appsettings.Development.json
@@ -81,7 +81,27 @@
         "ProducerId": "Producer1", // devon identifier
         "Servers": "127.0.0.1:9092", // Initial list of brokers as a CSV list of broker host or host:port. The application may also use `rd_kafka_brokers_add()` to add brokers during runtime
         "ClientId": "client1", //Client identifier
-        "Topic": "input", // topics to deliver the message
+        "Topic": "topic1", // topics to deliver the message
+        "MessageMaxBytes": 1000000, //Maximum Kafka protocol request message size. Due to differing framing overhead between protocol versions the producer is unable to reliably enforce a strict max message limit at produce time and may exceed the maximum size by one message in protocol ProduceRequests, the broker will enforce the the topic's `max.message.bytes` limit (see Apache Kafka documentation)
+        "CompressionLevel": -1, // [0-9] for gzip; [0-12] for lz4; only 0 for snappy; -1 = codec-dependent default compression level
+        "CompressionType": "None", // None, Gzip, Snappy, Lz4, Zstd
+        "ReceiveMessageMaxBytes": 100000000,
+        "EnableSslCertificateVerification": false,
+        "CancellationDelayMaxMs": 100, // The maximum length of time (in milliseconds) before a cancellation request is acted on. Low values may result in measurably higher CPU usage
+        "Ack": "None", //Zero=Broker does not send any response/ack to client, One=The leader will write the record to its local log but will respond without awaiting full acknowledgement from all followers. All=Broker will block until message is committed by all in sync replicas (ISRs). If there are less than min.insync.replicas (broker configuration) in the ISR set the produce request will fail
+        "Debug": "", //A comma-separated list of debug contexts to enable. Detailed Producer debugging: broker,topic,msg. Consumer: consumer,cgrp,topic,fetch
+        "BrokerAddressTtl": 1000, //How long to cache the broker address resolving results (milliseconds)
+        "BatchNumMessages": 1000000, // Maximum size (in bytes) of all messages batched in one MessageSet, including protocol framing overhead. This limit is applied after the first message has been added to the batch, regardless of the first message's size, this is to ensure that messages that exceed batch.size are produced. The total MessageSet size is also limited by batch.num.messages and message.max.bytes
+        "EnableIdempotence": false, //When set to `true`, the producer will ensure that messages are successfully produced exactly once and in the original produce order. The following configuration properties are adjusted automatically (if not modified by the user) when idempotence is enabled: `max.in.flight.requests.per.connection=5` (must be less than or equal to 5), `retries=INT32_MAX` (must be greater than 0), `acks=all`, `queuing.strategy=fifo`. Producer instantation will fail if user-supplied configuration is incompatible
+        "MaxInFlight": 5,
+        "MessageSendMaxRetries": 5,
+        "BatchSize": 100000000 // Maximum size (in bytes) of all messages batched in one MessageSet, including protocol framing overhead. This limit is applied after the first message has been added to the batch, regardless of the first message's size, this is to ensure that messages that exceed batch.size are produced. The total MessageSet size is also limited by batch.num.messages and message.max.bytes
+      },
+      {
+        "ProducerId": "Producer2", // devon identifier
+        "Servers": "127.0.0.1:9092", // Initial list of brokers as a CSV list of broker host or host:port. The application may also use `rd_kafka_brokers_add()` to add brokers during runtime
+        "ClientId": "client2", //Client identifier
+        "Topic": "topic2", // topics to deliver the message
         "MessageMaxBytes": 1000000, //Maximum Kafka protocol request message size. Due to differing framing overhead between protocol versions the producer is unable to reliably enforce a strict max message limit at produce time and may exceed the maximum size by one message in protocol ProduceRequests, the broker will enforce the the topic's `max.message.bytes` limit (see Apache Kafka documentation)
         "CompressionLevel": -1, // [0-9] for gzip; [0-12] for lz4; only 0 for snappy; -1 = codec-dependent default compression level
         "CompressionType": "None", // None, Gzip, Snappy, Lz4, Zstd
@@ -118,6 +138,8 @@
       {
         "ApplicationId": "value_count_stream",
         "Servers": "localhost:9092",
+        "AllowMultipleTopics": true,
+        "Topics": "topic1,topic2", // Comma separated topics to create
         "AutoOffsetReset": "earliest",
         "StateDir": "./ValueCountStream",
         "CommitIntervalMs": "5000",
@@ -127,6 +149,8 @@
       {
         "ApplicationId": "json_merge_stream",
         "Servers": "localhost:9092",
+        "AllowMultipleTopics": true,
+        "Topics": "topic1,topic2", // Comma separated topics to create
         "AutoOffsetReset": "earliest",
         "StateDir": "./ValueCountStream",
         "CommitIntervalMs": "5000",
