--- a/source/Templates/Kafka/Devon4Net.Application.Kafka/appsettings.Development.json
+++ b/source/Templates/Kafka/Devon4Net.Application.Kafka/appsettings.Development.json
@@ -81,7 +81,7 @@
         "ProducerId": "Producer1", // devon identifier
         "Servers": "127.0.0.1:9092", // Initial list of brokers as a CSV list of broker host or host:port. The application may also use `rd_kafka_brokers_add()` to add brokers during runtime
         "ClientId": "client1", //Client identifier
-        "Topic": "topic1", // topics to deliver the message
+        "Topic": "topic3", // topics to deliver the message
         "MessageMaxBytes": 1000000, //Maximum Kafka protocol request message size. Due to differing framing overhead between protocol versions the producer is unable to reliably enforce a strict max message limit at produce time and may exceed the maximum size by one message in protocol ProduceRequests, the broker will enforce the the topic's `max.message.bytes` limit (see Apache Kafka documentation)
         "CompressionLevel": -1, // [0-9] for gzip; [0-12] for lz4; only 0 for snappy; -1 = codec-dependent default compression level
         "CompressionType": "None", // None, Gzip, Snappy, Lz4, Zstd
@@ -101,7 +101,7 @@
         "ProducerId": "Producer2", // devon identifier
         "Servers": "127.0.0.1:9092", // Initial list of brokers as a CSV list of broker host or host:port. The application may also use `rd_kafka_brokers_add()` to add brokers during runtime
         "ClientId": "client2", //Client identifier
-        "Topic": "topic2", // topics to deliver the message
+        "Topic": "topic3", // topics to deliver the message
         "MessageMaxBytes": 1000000, //Maximum Kafka protocol request message size. Due to differing framing overhead between protocol versions the producer is unable to reliably enforce a strict max message limit at produce time and may exceed the maximum size by one message in protocol ProduceRequests, the broker will enforce the the topic's `max.message.bytes` limit (see Apache Kafka documentation)
         "CompressionLevel": -1, // [0-9] for gzip; [0-12] for lz4; only 0 for snappy; -1 = codec-dependent default compression level
         "CompressionType": "None", // None, Gzip, Snappy, Lz4, Zstd
@@ -138,8 +138,8 @@
       {
         "ApplicationId": "value_count_stream",
         "Servers": "localhost:9092",
-        "AllowMultipleTopics": true,
-        "Topics": "topic1,topic2", // Comma separated topics to create
+        "AllowMultipleTopics": false,
+        "Topics": "topic3", // Comma separated topics to create
         "AutoOffsetReset": "earliest",
         "StateDir": "./ValueCountStream",
         "CommitIntervalMs": "5000",
@@ -149,8 +149,8 @@
       {
         "ApplicationId": "json_merge_stream",
         "Servers": "localhost:9092",
-        "AllowMultipleTopics": true,
-        "Topics": "topic1,topic2", // Comma separated topics to create
+        "AllowMultipleTopics": false,
+        "Topics": "topic3", // Comma separated topics to create
         "AutoOffsetReset": "earliest",
         "StateDir": "./ValueCountStream",
         "CommitIntervalMs": "5000",
